--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,5 +1,11 @@
 h1 一覧ページ
 
+= search_form_for @q do |f|
+  = f.label :title, "タイトル"
+  = f.search_field :title_cont
+
+  = f.submit "検索"
+
 p = link_to '作成依頼', new_post_path
 
 - @posts.each do |post|
