--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,4 +8,16 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
+    header
+      ul 
+        li = link_to "Top", root_path
+        - if user_signed_in?
+          li = link_to "MyProfile", user_path(current_user)
+          li = link_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトしますか?' }
+        - else
+          li = link_to "Signin", new_user_session_path
+    p.notice
+      = notice
+    p.alert
+      = alert
     = yield
