--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,5 +1,23 @@
 h1 作成依頼ページ
 
-= render 'form'
+= form_with model: @post, local: true, url: confirm_new_post_path do |f|
+
+  .field 
+    = f.label :title
+    br
+    = f.text_field :title, class: 'form-control'
+
+  .field 
+    = f.label :story
+    br
+    = f.text_area :story, class: 'form-control'
+
+  .field 
+    = f.label :order
+    br
+    = f.text_area :order, class: 'form-control'
+  
+  .submit
+    = f.submit '確認画面へ', class: 'btn btn-primary'
 
 
