--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -4,4 +4,5 @@ ul
 
 p = simple_format text_url_to_link(h(@user.profile)).html_safe
 
-= link_to 'プロフィールを編集', edit_user_registration_path
+- if user_signed_in? && @user.id == current_user.id  
+  = link_to 'プロフィールを編集', edit_user_registration_path
