--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -13,4 +13,5 @@ p = link_to '作成依頼', new_post_path
   ul
     li = post.title
     li = post.story
-    li = link_to "詳細", post
+    li = link_to "詳細を見る", post
+  hr
