--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -11,6 +11,9 @@
 @import "active_admin/mixins";
 @import "active_admin/base";
 
+// Active Bootstrap
+@import "active_bootstrap_skin";
+
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
 //
