--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -21,7 +21,7 @@ p ・依頼人
     br
     = f.submit '追加', data: { confirm: "投稿しますか？"}
 - else
-  p 物語作成に参加するには、#{link_to "ログイン", new_user_session_path}してください
+  p 小説作成に参加するには、#{link_to "ログイン", new_user_session_path}してください
 
 h2 本文
 
