--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,12 +191,19 @@ header li {
 
 
 
+.confirm-wrapper {
+  margin-top: 40px;
+}
 
 
+.confirm-wrapper li {
+  margin: 8px;
+}
 
 
-
-
+.message-wrapper {
+  margin: 20px;
+}
 
 
 
