--- a/app/views/posts/confirm_new.html.slim
+++ b/app/views/posts/confirm_new.html.slim
@@ -1,21 +1,22 @@
 = provide(:title, "依頼確認画面")
 
-h1 依頼内容の確認
+.confirm-wrapper
+  h1 依頼内容の確認
 
-h3 この内容で依頼しますか？
+  h3 この内容で依頼しますか？
 
-= form_with model: @post, local: true do |f|
-  ul
-    li = Post.human_attribute_name(:title)
-    li = @post.title
-    = f.hidden_field :title
+  = form_with model: @post, local: true do |f|
+    ul
+      li = Post.human_attribute_name(:title)
+      li = @post.title
+      = f.hidden_field :title
 
-    li = Post.human_attribute_name(:story)
-    li = @post.story
-    = f.hidden_field :story
+      li = Post.human_attribute_name(:story)
+      li = @post.story
+      = f.hidden_field :story
 
-    li = Post.human_attribute_name(:order)
-    li = @post.order
-    = f.hidden_field :order
-  = f.submit '戻る', name: 'back', data: { confirm: "依頼を破棄しますか？"}, class: 'btn btn-primary'
-  = f.submit '作成', class: 'btn btn-primary'
+      li = Post.human_attribute_name(:order)
+      li = @post.order
+      = f.hidden_field :order
+    = f.submit '戻る', name: 'back', data: { confirm: "依頼を破棄しますか？"}, class: 'btn btn-primary'
+    = f.submit '作成', class: 'btn btn-primary'
