--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -1,24 +1,26 @@
 = provide(:title, "ダイレクトメッセージ")
-
-h1 会議室
+.title
+  h1 会議室
 
 h4 トーク参加者
 
 - @entries.each do |e|
   h5 = link_to "#{e.user.name}", e.user
 
-= form_for @message do |f|
-  = f.text_field :talk, :placeholder => "メッセージを入力して下さい"
-  = f.hidden_field :room_id, :value => @room.id
-  br
-  = f.submit "投稿"
+.message-wrapper
+  = form_for @message do |f|
+    = f.text_field :talk, :placeholder => "メッセージを入力して下さい"
+    = f.hidden_field :room_id, :value => @room.id
+    br
+    = f.submit "投稿"
 
-- if @messages.present?
-  - @messages.each do |m|
-    p = simple_format text_url_to_link(h(m.talk)).html_safe
-    small by#{m.user.name}
-    hr
-- else 
-  h3 メッセージはまだありません
+.message-log
+  - if @messages.present?
+    - @messages.each do |m|
+      p = simple_format text_url_to_link(h(m.talk)).html_safe
+      small by#{m.user.name}
+      hr
+  - else 
+    h3 メッセージはまだありません
 
 
