--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -14,12 +14,12 @@
 
       - if @isRoom == true
         p
-          a.btn.btn-default href="/rooms/#{@roomId}"  会議室へ
-      - else 
+          a.btn.btn-default href="/rooms/#{@roomId}"  
+      - else
         = form_for @room do |f| 
           = fields_for @entry do |e|
             = e.hidden_field :user_id, :value=> @user.id
-        = f.submit "チャットを始める"
+          = f.submit "会議室へ"
 
  
 
