--- a/app/assets/stylesheets/admin/active_admin.scss
+++ b/app/assets/stylesheets/admin/active_admin.scss
@@ -12,7 +12,7 @@
 @import "active_admin/base";
 
 // Active Bootstrap
-@import "active_bootstrap_skin";
+// @import "active_bootstrap_skin";
 
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
