--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,13 +10,15 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
   body
     header
-      ul 
-        li = link_to "Top", root_path
-        - if user_signed_in?
-          li = link_to "#{current_user.name}", user_path(current_user)
-          li = link_to "Logout", destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトしますか?' }
-        - else
-          li = link_to "Signin", new_user_session_path
+      .header-logo
+        h1 = link_to "RELIER", root_path
+      .header-list
+        ul
+          - if user_signed_in?
+            li = link_to "マイページ", user_path(current_user)
+            li = link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトしますか?' }
+          - else
+            li = link_to "サインイン", new_user_session_path
     p.notice
       = notice
     .container
