--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,11 +16,6 @@
  */
 
 
-// @import "bootstrap";
-
-
-html {
-}
 
 
 html, body, div, span, object, iframe,
@@ -62,36 +57,70 @@ a:hover {
   transition: 0.3s;
 }
 
-// ul, li {
-//   list-style-type: none;
-//   padding: 0;
-//   margin: 0;
-// }
-
-// a {
-//   color: #2d3133;
-//   font-size: 15px;
-//   text-decoration: none;
-// }
-
-// h1, h2, h3, h4, h5, h6, p {
-//   margin: 0;
-// }
-
-// /* 共通レイアウト ================================ */
-// body {
-//     margin: 0;
-// }
-
-// .container {
-//   margin-bottom: 80px;
-// }
+.container {
+  margin-bottom: 200px;
+}
 
 
 
+// HEADER
+
+header {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1%;
+  margin-left: 8%;
+  margin-right: 8%;
+}
+
+.header-logo h1 {
+  font-size: 1.75rem;
+}
+
+.header-list ul {
+  display: flex;
+}
+
+.header-list ul li a{
+  font-weight: bold;
+  font-size: 0.92rem;
+}
 
 
 
+footer {
+  margin-bottom: 1%;
+  margin-left: 8%;
+  margin-right: 8%;
+}
+
+.footer .footer-copo-name {
+  border-bottom: solid 2px #ddd;
+}
+
+.footer .footer-copo-name h3 {
+  font-size: 1.125rem;
+  padding-bottom: .5%;
+}
+
+.footer-list {
+  margin-top: 1%;
+}
+
+.footer-list ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-list ul li .footer-ap-name {
+  font-weight: bold;
+  font-size: 1.125rem;
+}
+
+.footer-list ul li .copylight {
+  padding-top: 1%;
+  color: #777;
+}
 
 
 
