--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,7 +40,7 @@ time, mark, audio, video {
 }
 
 body {
-  font-family: "M PLUS Rounded 1c";
+  font-family: "Sawarabi Gothic";
 }
 
 nav, ul, li {
@@ -86,6 +86,10 @@ header {
   font-size: 0.92rem;
 }
 
+
+
+
+// FOOTER
 
 
 footer {
