--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,6 +59,8 @@ a:hover {
 
 .container {
   margin-bottom: 200px;
+  margin-left: 8%;
+  margin-right: 8%;
 }
 
 
@@ -87,6 +89,65 @@ header {
   font-size: 0.92rem;
   margin-left: 20px;
 }
+
+
+
+
+
+// POST INDEX
+
+// TOP
+
+.search {
+  margin-top: 8%;
+}
+
+.search .post-index-action-msg {
+  font-weight: normal;
+  margin-bottom: .6%;
+  margin-left: 16%;
+  color: #666;
+}
+
+.search form {
+  text-align: center;
+}
+
+// 検索窓のデザイン
+.search input[type="search"] {
+  font-size: 1.125rem;
+  height: 37px;
+  width: 65%;
+  // border-color: #ddd;
+  border: none;
+  background:rgb(252, 252, 252);
+}
+
+// 検索ボタンのデザイン
+.search input[type="submit"] {
+  cursor: pointer;
+  // margin-left: .8%;
+  font-size: 1.125rem;
+  height: 37px;
+  width: 77px;
+  background:#7fbfff;
+  color: #fff;
+  // font-weight: bold;
+  border-radius:0 2px 2px 0;
+  border: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
