--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,26 +1,13 @@
 = provide(:title, "")
 
-.title
-  h1 Top Page
+.bg-top
+  .search
+    = search_form_for @q do |f|
+      = f.search_field :title_cont, placeholder: "タイトル名、ジャンルで検索"
 
-.search
-  = search_form_for @q do |f|
-    = f.label :title, "タイトル"
-    = f.search_field :title_cont
-
-    = f.submit "検索"
+      = f.submit "検索"
 
 p.new = link_to '作成依頼', new_post_path
 
-h3 依頼
-
-hr
-
 .post-index
   - @posts.each do |post|
-  
-    ul
-      li.post-title = post.title
-      li = post.story
-      li = link_to "詳細を見る", post
-    hr
