--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,13 +1,23 @@
 = provide(:title, "")
 
 .bg-top
+  .top-header
+    .top-header-logo
+      h1 = link_to "RELIER", root_path
+    .top-header-list
+      ul
+        - if user_signed_in?
+          li = link_to "マイページ", user_path(current_user)
+          li = link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトしますか?' }
+        - else
+          li = link_to "サインイン", new_user_session_path
   .search
     = search_form_for @q do |f|
       = f.search_field :title_cont, placeholder: "タイトル名、ジャンルで検索"
 
       = f.submit "検索"
 
-p.new = link_to '作成依頼', new_post_path
+  p.new = link_to '作成依頼', new_post_path
 
-.post-index
-  - @posts.each do |post|
+  .post-index
+    - @posts.each do |post|
