Fix top page design

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -19,7 +19,7 @@
         = f.submit "検索"
 
 .top-container
-  p.new = link_to '作成依頼', new_post_path
+  / p.new = link_to '作成依頼', new_post_path
 
   .post-index
     - @posts.each do |post|
