--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -15,11 +15,16 @@
     .search
       = search_form_for @q do |f|
         = f.search_field :title_cont, placeholder: "タイトル名、ジャンルで検索"
-
         = f.submit "検索"
 
 .top-container
-  / p.new = link_to '作成依頼', new_post_path
+  .top-newuser-action
+    p = link_to "はじめてのご利用の方へ", "#"
 
-  .post-index
+  p.new = link_to '作成依頼', new_post_path
+
+  .top-ranking
+    - @posts.each do |post|
+
+  .top-new-arrival-content
     - @posts.each do |post|
