Add banner for top page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -172,6 +172,17 @@ header {
   border: none;
 }
 
+.top-newuser-action {
+  background-color: rgb(200, 243, 202);
+  margin: 4% 14%;
+  text-align: center;
+}
+
+.top-newuser-action p a {
+  display: block;
+  padding: 6% 0;
+  font-size: 1.25rem;
+}
 
 
 
