Add get ranking_posts for posts_controller

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -21,10 +21,14 @@
   .top-newuser-action
     p = link_to "はじめてのご利用の方へ", "#"
 
-  p.new = link_to '作成依頼', new_post_path
+  / p.new = link_to '作成依頼', new_post_path
 
   .top-ranking
-    - @posts.each do |post|
+    - @ranking_posts.each do |post|
+      p.top-post-img 画像が入る
+      h3.top-post-title = post.title
+      p.top-post-story = post.story
+      p = link_to "詳細をみる", "#"
 
   .top-new-arrival-content
     - @posts.each do |post|
