Add link for top ranking post

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -217,11 +217,13 @@ header {
 
 .ranking-content .top-post-title {
   margin-top: 1.2%;
-  font-size: 1.125rem;
+  font-size: 1.03rem;
   color: #555;
 }
 
 .ranking-content .top-post-link a {
+  margin-top: .7%;
+  font-size: .95rem;
   color: #777;
 }
 
