--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,6 +1,6 @@
 = provide(:title, "")
 
-.bg-top
+section.bg-top
   .top-container
     .top-header
       .top-header-logo
@@ -17,13 +17,13 @@
         = f.search_field :title_cont, placeholder: "タイトル名、ジャンルで検索"
         = f.submit "検索"
 
-.top-container
+section.top-container
   .top-newuser-action
     p = link_to "はじめてのご利用の方へ", "#"
 
   / p.new = link_to '作成依頼', new_post_path
 
-  section.top-ranking-wrapper
+  .top-ranking-wrapper
     .top-ranking-title
       h2 おすすめ作品
     .top-ranking
@@ -34,7 +34,7 @@
           / p.top-post-story = post.story
           p.top-post-link = link_to "詳細をみる", post
 
-  section.top-new-arrival-wrapper
+  .top-new-arrival-wrapper
     .top-new-arrival-title
       h2 新着作品
     .top-new-arrival
