--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -224,11 +224,15 @@ header {
 // RANKIGN NEW-ARRIVAL COMMON
 
 
-// 本来はimgが入る
 .top-post-img {
   background-color: #9ccaf8;
   width: 250px;
   height: 352px;
+}
+
+.top-post-img img {
+  width: 250px;
+  height: 352px
 }
 
 .top-post-title {
