Add image column (kari)

--- a/app/views/posts/confirm_new.html.slim
+++ b/app/views/posts/confirm_new.html.slim
@@ -7,6 +7,11 @@
 
   = form_with model: @post, local: true do |f|
     ul
+      / 「image」が入らない
+      / li = Post.human_attribute_name(:image)
+      / li = @post.image
+      / = f.hidden_field :image  
+
       li = Post.human_attribute_name(:title)
       li = @post.title
       = f.hidden_field :title
