Fix top page mongon

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -19,7 +19,7 @@ section.bg-top
 
 section.top-container
   .top-newuser-action
-    p = link_to "はじめてのご利用の方へ", "#"
+    p = link_to "はじめてご利用の方へ", "#"
 
   / p.new = link_to '作成依頼', new_post_path
 
