Fix image uploader

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -3,7 +3,7 @@
   .field 
     = f.label :image
     br
-    = f.file_field :img, class: "image"
+    = f.file_field :image, class: "image"
 
     = f.label :title
     br
