--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,38 +1,29 @@
-h2.title
-  | Sign up
+.session-new-content
+  h2
+    | サインアップ
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = render "devise/shared/error_messages", resource: resource
-
   .field
     = f.label :name
     br
     = f.text_field :name, autofocus: true, autocomplete: "name"
-
   .field
     = f.label :email
     br
     = f.email_field :email, autofocus: true, autocomplete: "email"
-
   .field
     = f.label :password
     - if @minimum_password_length
       em
         | (
         = @minimum_password_length
-        |  characters minimum)
+        | 文字以上)
     br
     = f.password_field :password, autocomplete: "new-password"
-
   .field
     = f.label :password_confirmation
     br
     = f.password_field :password_confirmation, autocomplete: "new-password"
-
-  .field
-    = f.label :my_title
-    br
-    = f.text_field :my_title, autofocus: true, autocomplete: "my_title"
-
   .actions
-    = f.submit "Sign up"
+    = f.submit "サインイン"
 = render "devise/shared/links"
