--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -8,18 +8,19 @@
   p.profile = simple_format text_url_to_link(h(@user.profile)).html_safe
 
   .kaigi
-    - if user_signed_in? &&@user.id == current_user.id
+    - if user_signed_in? && @user.id == current_user.id
 
     - else
 
-      - if @isRoom == true
-        p
-          a.btn.btn-default href="/rooms/#{@roomId}"  会議室へ
-      - else
-        = form_for @room do |f| 
-          = fields_for @entry do |e|
-            = e.hidden_field :user_id, :value=> @user.id
-          = f.submit "会議室へ", class: 'btn btn-default'
+      /// DM的な機能に飛ぶURL現在（2020/12/10）は不要
+      / - if @isRoom == true
+      /   p
+      /     a.btn.btn-default href="/rooms/#{@roomId}"  会議室へ
+      / - else
+      /   = form_for @room do |f| 
+      /     = fields_for @entry do |e|
+      /       = e.hidden_field :user_id, :value=> @user.id
+      /     = f.submit "会議室へ", class: 'btn btn-default'
 
  
 
