--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -3,7 +3,7 @@
 .post-show-top
   .post-main-contents
     .post-show-title
-      h1 = @post.title
+      h2 = @post.title
 
     .post-show-image
       - if @post.image.present?
@@ -17,12 +17,10 @@
         li = link_to "♡", "#"
         / li = link_to '概要を変更', edit_post_path(@post)
         / li = link_to '依頼を削除', @post, method: :delete, data: { confirm: '本文も全て消えてしまいます。削除してもよろしいですか？' }
+    .post-desc
+      h3 あらすじ 
+      p = simple_format(@post.story)
 
-
-.order-wrapper
-  .order
-    p.column ・あらすじ
-    = simple_format(@post.story)
   .order
     p.column ・依頼人
     = link_to "#{@post.user.name}", "/users/#{@post.user_id}"
