--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,7 +55,7 @@ a:hover {
 }
 
 .container {
-  margin-bottom: 250px;
+  margin-bottom: 150px;
 }
 
 /* コンテンツ横幅隠し */
@@ -75,6 +75,7 @@ header {
   margin-top: 1%;
   margin-left: 8%;
   margin-right: 8%;
+  margin-bottom: 4%;
 }
 
 .header-logo h1 {
@@ -354,3 +355,18 @@ footer {
 
 
 
+
+
+// POST SHOW
+
+.post-show-top {
+  background-color: rgb(244, 244, 244);
+  padding-top: 1.3%;
+  padding-bottom: 13%;
+}
+
+.post-main-contents {
+  margin-left: 8%;
+  margin-right: 8%;
+  background-color: #fff;
+}
