--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -23,8 +23,8 @@
 
     .post-reaction
       ul
-        li = link_to "♡ #{12 + 12}", "#"
-        li = link_to "め #{240 + 240}", "#"
+        li ♡ 12
+        li め 240
 
     .post-reading-button
       p = link_to '本文を読んでみる', novel_path, class: 'btn btn-primary'
@@ -65,4 +65,12 @@
             span |
             = link_to "削除", [@post, micropost], method: :delete, data: { confirm: '削除?' }
           p = "作成日時:#{time_ago_in_words(micropost.created_at)}前"
-        hr
+
+  // ユーザーを表示するところ
+  .post-sub-contents
+    .post-sub-title
+      h3 依頼人
+    .post-sub-user-name
+      ul
+        li = link_to "◯", user_path(@post.user)
+        li = link_to @post.user.name, user_path(@post.user)
