--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -363,10 +363,19 @@ footer {
   background-color: rgb(244, 244, 244);
   padding-top: 1.3%;
   padding-bottom: 13%;
+  display: flex;
 }
 
 .post-main-contents {
   margin-left: 15%;
-  margin-right: 31%;
+  padding-right: 34%;
   background-color: #fff;
+}
+
+.post-sub-contents {
+  margin-left: 2%;
+}
+
+.post-sub-contents .post-sub-user-name ul {
+  display: flex;
 }
