Fix design for post show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -372,6 +372,15 @@ footer {
   background-color: #fff;
 }
 
+.post-show-title {
+  padding-top: 7%;
+  padding-bottom: 3%;
+  font-size: 1.5rem;
+}
+
+
+
+
 .post-sub-contents {
   margin-left: 2%;
 }
@@ -396,3 +405,4 @@ footer {
   font-size: 0.95rem;
   color:#777;
 }
+
