--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -31,9 +31,6 @@
     .post-reading-button
       p = link_to '本文を読んでみる', novel_path, class: 'btn btn-primary'
 
-
-
-
     // order の部分です
     .order
         - if user_signed_in?
@@ -68,12 +65,11 @@
             = link_to "削除", [@post, micropost], method: :delete, data: { confirm: '削除?' }
           p = "作成日時:#{time_ago_in_words(micropost.created_at)}前"
 
-  // ユーザーを表示するところ
+  // 依頼人ユーザーを表示
   .post-sub-contents
-  
     .post-sub-title
       h3 依頼人
-
+    // 依頼人ユーザーのアイコンと名前
     .post-sub-user-name
       = link_to user_path(@post) do
         ul
